<resources>
    <string name="app_name">FarmersApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="errorusername">Username Tidak Boleh Kosong</string>
    <string name="errorlahir">Tanggal Lahir Tidak Boleh Kosong</string>
    <string name="emptyusername">Username Tidak Valid</string>
    <string name="errorpass">Password Tidak Boleh Kosong</string>
    <string name="lenghtpass">Password Minimal 6 Karakter</string>
    <string name="username">Username</string>
    <string name="nama_barang">tidak boleh kosong</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="hint_search">Mencari Barang</string>
    <string name="tajuk_halaman_utama">Explore</string>
    <string name="no_items_in_cart_text">Belum Ada Produk yang Ditambahkan!</string>
    <string name="add_img_item_desc">image item</string>
    <string name="cart_check_out_btn">Checkout</string>
    <string name="pro_details_like_btn_desc">Tombol Like</string>
    <string name="pro_details_delete_btn_desc">tombol hapus product</string>
    <string name="minus_btn_desc">tombol kurang</string>
    <string name="plus_btn_desc">tombol tambah</string>
    <string name="daftar">Daftar</string>
    <string name="pesan">Pesan Sekarang</string>
    <string name="description">Description</string>
    <string name="product_description">Product Description :</string>
    <string name="rp">Rp.</string>
    <string name="harga">Harga</string>
    <string name="nama_product">Nama Product :</string>
    <string name="image">image</string>
    <string name="waiting">Mohon tunggu...kami akan menginformasikan lewat whatsapp, pastikan nomer yg anda cantumkan aktif</string>
    <string name="mohon_menunggu">Mohon Menunggu</string>
    <string name="masukan_username">Masukan Username</string>
    <string name="password">Password</string>
    <string name="masukan_password">Masukan Password</string>
    <string name="login">Login</string>
    <string name="text">---Jika belum punya akun silahkan buat akun---</string>
    <string name="buat_akun">Buat Akun</string>
    <string name="nama">Nama :</string>
    <string name="nomer">Nomer :</string>
    <string name="email">Email :</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="nomer_telepon">Nomer Telepon</string>
    <string name="silahkan_login_jika_sudah_punya_akun">Silahkan Login Jika sudah punya akun</string>
    <string name="nama_barangt">Nama barang</string>
    <string name="harga_barang">Harga barang</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="upload">upload</string>
    <string name="edit_nama">Edit Nama</string>
</resources>